@@ -1,3 +1,4 @@
+* Add sendmail module to send transactional email
 * Support Two-Phase Commit in Transaction
 * Allow Report to generate text plain, XML, HTML and XHTML
 * Add workflow graph on ir.model
